# easy_glm

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES_SUMMARY.md  LICENSE  README.md  __init__.py  functions  job-logs.txt  launch_ui.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  setup_dev.ps1  setup_dev.py  setup_dev.sh  test.py  test_installation.py  test_ui_demo.py  verify_git_install.py
.github/workflows/: ci.yml  publish.yml
core/: all_ratetables.py  blueprint.py  data.py  model.py  plots.py  prepare.py  ratetable.py  transforms.py
examples/: advanced_pipeline.py  basic_usage.py  benchmark_demo.py  easy_glm_demo.py
src/easy_glm/: __init__.py
src/easy_glm/benchmarking/: __init__.py  __main__.py  benchmark.py  data_generators.py  metrics.py
src/easy_glm/core/: __init__.py  all_ratetables.py  blueprint.py  data.py  easyglm.py  model.py  plots.py  prepare.py  ratetable.py  transforms.py
src/easy_glm/engine/: __init__.py  _scoring.py  models.py  rate_model.py
src/easy_glm/ui/: __init__.py  __main__.py  app.py  charts.py  metrics.py
tests/: conftest.py  test_benchmarking.py  test_blueprint.py  test_engine.py  test_imports.py  test_model_and_ratetable.py  test_nulls.py  test_scoring.py  test_ui.py
